tests/Unit/PHPStan/Rules/Naming/Fixtures/TypeSuffixMismatch/Invalid/InterfaceBareName.php
<?php

declare(strict_types=1);

namespace TypeSuffixMismatchFixtures\Invalid;

final class InterfaceBareName
{
    private ChannelInterface $channel;
}
